tests/integration/snapshots/integration__parse_failure__object_double_open_curly.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
{{
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `{`
 --> stdin:1:2
  |
1 | {{
  | -^
  | |
  | expected due to `{`
