tests/integration/snapshots/integration__parse_failure__object_missing_colon_with_closed_curly.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi" }
stdout ---

stderr ---
error: expected colon after key, found `}`
 --> stdin:1:7
  |
1 | {"hi" }
  |  ---- ^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon and placeholder value
  |
1 | {"hi": "🐟🛹" }
  |      ++++++++
