tests/integration/snapshots/integration__parse_failure__object_missing_colon_with_null.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi" null 
stdout ---

stderr ---
error: expected colon after key, found `null`
 --> stdin:1:7
  |
1 | {"hi" null 
  |  ---- ^^^^
  |  |
  |  expected due to `"hi"`
  |
help: insert the missing colon
  |
1 | {"hi":  null 
  |      +
