tests/integration/snapshots/integration__parse_failure__object_missing_comma_between_values.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi": null null
stdout ---

stderr ---
error: expected comma or closed curly brace, found `null`
 --> stdin:1:13
  |
1 | {"hi": null null
  | -    ------ ^^^^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
