tests/integration/snapshots/integration__parse_failure__object_missing_comma_or_closing_with_whitespace.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{"hi": null     
stderr ---
error: expected comma or closed curly brace, found no significant characters
 --> stdin:1:11
  |
1 | {"hi": null     
  | -    -----^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: insert the missing closed brace
  |
1 | {"hi": null}     
  |            +
