tests/integration/snapshots/integration__parse_failure__object_open_curly.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{
stderr ---
error: expected entry or closed delimiter `}`, found no significant characters
 --> stdin:1:1
  |
1 | {
  | ^
  | |
  | expected due to `{`
  |
help: insert the missing closed delimiter `}`
  |
1 | {}
  |  +
