tests/integration/snapshots/integration__parse_failure__object_trailing_comma_with_closed.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{"hi": null, }
stderr ---
error: expected key, found `}`
 --> stdin:1:14
  |
1 | {"hi": null, }
  |            - ^
  |            |
  |            expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"hi": null, }
1 + {"hi": null }
  |
